--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -44,7 +44,7 @@
                         <label for="firstName" class="control-label">
                             First Name
                         </label>
-                        <input type="text" class="form-control" th:field="*{firstName}" required autofocus="autofocus" minlength="3" name="firstName" id="firstName">
+                        <input type="text" class="form-control" th:field="*{firstName}" required autofocus="autofocus" minlength="3" maxlength="" name="firstName" id="firstName">
                     </div>
                     <div class="form-group">
                         <label for="lastName" class="control-label">
