--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,31 +1,31 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Registration</title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
+
 <body>
-    <!-- header -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <button type="button" class="navbar-toggle collapsed"
-            data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-            aria-controls="navbar">
-                <span class="sr-only">
-                    Toggle navigation
-                </span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="#" class="navbar-brand" th:href="@{/}">Registration and login module</a>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">
+                        Toggle navigation
+                    </span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand" th:href="@{/}">Registration and login module</a>
+            </div>
         </div>
     </nav>
     <br>
@@ -44,28 +44,30 @@
                         <label for="firstName" class="control-label">
                             First Name
                         </label>
-                        <input type="text" class="form-control" th:field="*{firstName}" required autofocus="autofocus" minlength="3" maxlength="" name="firstName" id="firstName">
+                        <input type="text" class="form-control" th:field="*{firstName}" required autofocus="autofocus"
+                            minlength="3" maxlength="" name="firstName" id="firstName">
                     </div>
                     <div class="form-group">
                         <label for="lastName" class="control-label">
                             Last Name
                         </label>
-                        <input type="text" class="form-control" th:field="*{lastName}" required autofocus="autofocus" minlength="3" name="lastName" id="lastName">
+                        <input type="text" class="form-control" th:field="*{lastName}" required autofocus="autofocus"
+                            minlength="3" name="lastName" id="lastName">
                     </div>
                     <div class="form-group">
                         <label for="email" class="control-label">
                             Email
                         </label>
                         <input type="text" class="form-control" th:field="*{email}" required autofocus="autofocus"
-                         name="email" id="email"
-                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
-                         title="Email must be formated as xx@xx.xx"  >
+                            name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                            title="Email must be formated as xx@xx.xx">
                     </div>
                     <div class="form-group">
                         <label for="password" class="control-label">
                             Password
                         </label>
-                        <input type="password" class="form-control" th:field="*{password}" required autofocus="autofocus" name="password" id="password">
+                        <input type="password" class="form-control" th:field="*{password}" required
+                            autofocus="autofocus" name="password" id="password">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success">Register</button>
@@ -76,4 +78,5 @@
         </div>
     </div>
 </body>
+
 </html>
