--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,10 @@
 
     <div class="container">
         <h1>Hello world</h1>
-        Welcome <span sec:authentication="principal.username">User</span>
+        Welcome <span sec:authentication="principal.fullname">User</span>
+        <p sec:authentication="principal.username">User</p>
+        <p sec:authentication="principal.avatar">User</p>
+        <p sec:authentication="principal.registerdate">User</p>
     </div>
 </body>
 
